--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   crossorigin="anonymous"
 />
 
-    <title>Comic Life Nights!</title>
+    <title>Comic Life Nights</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
